syntax = "proto3";

package warehouse.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "warehouse/v1/model/warehouse-model.proto";

service WarehouseItemService {
  rpc GetItemCost(GetItemCostRequest) returns (GetItemCostResponse) {
    option (google.api.http) = {
      get: "/api/v1/warehouse/item/cost/{id}"
      response_body: "*"
    };
  }

  // should named List but it conflicts with the List from the ReserveService in a generated openapi spec
  rpc ItemList(ItemListRequest) returns (ItemListResponse) {
    option (google.api.http) = {get: "/api/v1/warehouse/item"};
  }

  rpc TopUp(ItemTopUpRequest) returns (ItemTopUpResponse) {
    option (google.api.http) = {
      put: "/api/v1/warehouse/item"
      body: "*"
    };
  }
}

message ItemListRequest {}

message ItemListResponse {
  repeated Item accounts = 1;
}

message GetItemCostRequest {
  string id = 1;
}

message GetItemCostResponse {
  double cost = 1;
}

message ItemTopUpRequest {
  TopUp top_up = 1;
  message TopUp {
    string id = 1;
    int32 amount = 2;
  }
}

message ItemTopUpResponse {
  int32 amount = 1;
}
